--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 body {
   font-family: sans-serif;
 }
+
+.product {
+  list-style-type: none;
+  padding: 0;
+}
+
+.product-name {
+  font-weight: bold;
+}
