--- a/style.css
+++ b/style.css
@@ -9,4 +9,15 @@ body {
 
 .product-name {
   font-weight: bold;
+  font-size: 18px;
+}
+
+.product-description {
+  font-family: cursive;
+  /* font-style: italic; */
+}
+
+.product-price {
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
 }
